--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "canistergeek_ic_rust"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 description = "A tool for Internet Computer to track your project canisters cycles and memory status."
 license = "MIT"
@@ -9,8 +9,8 @@ repository = "https://github.com/usergeek/canistergeek_ic_rust.git"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ic-cdk = "0.3"
-ic-cdk-macros = "0.3"
-serde = "1.0"
-chrono = "0.4"
-regex = "1.5.4"
+candid = "0.8.3"
+serde = "1.0.147"
+ic-cdk = "0.6.4"
+chrono = {version = "0.4.22", default-features = false, features = ["clock", "std"]}
+#regex = "1.5.6"
