--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "canistergeek_ic_rust"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2021"
 description = "A tool for Internet Computer to track your project canisters cycles and memory status."
 license = "MIT"
@@ -13,4 +13,6 @@ candid = "0.9.2"
 serde = "1.0.147"
 ic-cdk = "0.10.0"
 chrono = {version = "0.4.22", default-features = false, features = ["clock", "std"]}
+num-bigint = "0.4.3"
+num-traits = "0.2.16"
 #regex = "1.5.6"
